--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <div id="root">
 
     </div>
+    <script src="../client/imgConverter.js"></script>
     <script src="./bundle.js"></script>
 </body>
 </html>
