picture is showing and its beautiful. next step is to update pixel count

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pixel Pictures</title>
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.19.0/antd.css.map" rel="stylesheet"/> -->
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.11.6/antd.css" rel="stylesheet"/> -->
+    <link href="./style.css" />
 </head>
 <body>
     <div id="root">
 
     </div>
-    <script src="../client/imgConverter.js"></script>
+
+    <!-- <script src="../client/imgConverter.js"></script> -->
     <script src="./bundle.js"></script>
 </body>
 </html>
